XMLtoCSV/objects/unpackaged/objects/PCYC_Call_Compliance_Detail__c.object
<CustomObject>
    <fields>
        <fullName>PCYC_Age__c</fullName>
        <formula>Today() - DateValue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Business_Account__c</fullName>
        <label>Business Account</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Id__c</fullName>
        <label>Call Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Number__c</fullName>
        <label>Call Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Owner__c</fullName>
        <label>Call Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_URL__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  PCYC_Call_Id__c  ,&quot;Call&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Manager__c</fullName>
        <label>Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Non_Approved_Attendee__c</fullName>
        <label>Non Approved Attendee</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Primary_Specialty__c</fullName>
        <label>Primary Specialty</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Resolution_Record_Id__c</fullName>
        <label>Resolution Record Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Resolution_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolution Set?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Resolution_URL__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; PCYC_Resolution_Record_Id__c,&quot;Resolution&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Secondary_Specialty__c</fullName>
        <label>Secondary Specialty</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Why_Flagged__c</fullName>
        <description>Compliance Capture Reason</description>
        <inlineHelpText>Compliance Capture Reason</inlineHelpText>
        <label>Why Flagged</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Call Management Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Call_Compliance</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Call_Number__c</columns>
        <columns>PCYC_Business_Account__c</columns>
        <columns>PCYC_Call_Owner__c</columns>
        <columns>PCYC_Resolution_URL__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Call Compliance</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCC-{0}</displayFormat>
        <label>Call Management Detail#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Management Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>